--- a/wp_secret.yml
+++ b/wp_secret.yml
@@ -6,5 +6,5 @@ metadata:
     app: wordpress
 type: Opaque
 data:
-  db_root_password: $db_passworde
+  db_root_password: $db_password
   db_wordpress_password: $wordpress_password
