--- a/wp_volumes.yml
+++ b/wp_volumes.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: wp-mysql-pv0
+  name: etcd-pv0
   labels:
     app: wordpress
 spec:
@@ -11,13 +11,13 @@ spec:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Recycle
   nfs:
-    path: /mnt/nfs/data/0
+    path: /mnt/nfs/data/etcd0
     server: 10.10.10.10
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: wp-mysql-pvc0
+  name: data-etcd-0
   labels:
     app: wordpress
 spec:
@@ -30,7 +30,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: wp-mysql-pv1
+  name: etcd-pv1
   labels:
     app: wordpress
 spec:
@@ -40,13 +40,13 @@ spec:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Recycle
   nfs:
-    path: /mnt/nfs/data/1
+    path: /mnt/nfs/data/etcd1
     server: 10.10.10.10
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: wp-mysql-pvc1
+  name: data-etcd-1
   labels:
     app: wordpress
 spec:
@@ -59,7 +59,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: wp-mysql-pv2
+  name: etcd-pv2
   labels:
     app: wordpress
 spec:
@@ -69,13 +69,13 @@ spec:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Recycle
   nfs:
-    path: /mnt/nfs/data/2
+    path: /mnt/nfs/data/etcd2
     server: 10.10.10.10
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: wp-mysql-pvc2
+  name: data-etcd-2
   labels:
     app: wordpress
 spec:
