--- a/wp_secret.yml
+++ b/wp_secret.yml
@@ -7,4 +7,5 @@ metadata:
 type: Opaque
 data:
   db_root_password: $db_password
+  db_backup_password: $db_backup_password
   db_wordpress_password: $wordpress_password
