Add wp_myql, add pod anti affinity, update readme

--- a/wp_etcd.yml
+++ b/wp_etcd.yml
@@ -64,6 +64,16 @@ spec:
       labels: 
         app: etcd
     spec: 
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+              - key: app
+                operator: In
+                values:
+                - etcd
+            topologyKey: "kubernetes.io/hostname"
       containers:
       - name: etcd
         image: quay.io/coreos/etcd:latest
