--- a/wp_etcd.yml
+++ b/wp_etcd.yml
@@ -21,22 +21,6 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-   name: etcd-testport
-   labels:
-     app: etcd-testport
-spec:
-  type: NodePort
-  ports:
-  - port: 2379
-    name: etcd-testport
-    targetPort: 2379
-    protocol: TCP
-  selector:
-    app: etcd
----
-apiVersion: v1
-kind: Service
-metadata:
   name: etcd-percona
 spec:
   ports:
@@ -46,6 +30,22 @@ spec:
     protocol: TCP
   selector:
     app: etcd 
+#---
+#apiVersion: v1
+#kind: Service
+#metadata:
+#   name: etcd-testport
+#   labels:
+#     app: etcd-testport
+#spec:
+#  type: NodePort
+#  ports:
+#  - port: 2379
+#    name: etcd-testport
+#    targetPort: 2379
+#    protocol: TCP
+#  selector:
+#    app: etcd
 ---
 apiVersion: apps/v1
 kind: StatefulSet
