--- a/wp_mysql.yml
+++ b/wp_mysql.yml
@@ -1,3 +1,19 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql
+  labels:
+    app: mysql
+spec:
+ clusterIP: None
+ ports:
+ - port: 3306
+   protocol: TCP
+   targetPort: 3306
+   name: server
+ selector:
+    app: mysql
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
