--- a/wp_volumes.yml
+++ b/wp_volumes.yml
@@ -1,6 +1,38 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
+  name: wordpress-pv
+  labels:
+    pv-name: wordpress-pv
+spec:
+  capacity:
+    storage: 1Gi
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Recycle
+  nfs:
+    path: /mnt/nfs/content
+    server: 10.10.10.10
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: content-wordpress
+  labels:
+    app: wordpress
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 1Gi
+  selector:
+    matchLabels:
+      pv-name: wordpress-pv
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
   name: etcd-pv0
   labels:
     pv-name: etcd-pv0
