--- a/wp_wordpress.yml
+++ b/wp_wordpress.yml
@@ -6,3 +6,30 @@ metadata:
     app: wordpress
     tier: frontend
 spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      tier: frontend
+  template:
+    metadata:
+      name: wordpress
+      labels:
+        app: wordpress
+        tier: frontend
+    spec:
+      containers:
+      - name: wordpress
+        image: wordpress
+        ports:
+        - containerPort: 80
+          name: wordpress
+        env:
+          - name: WORDPRESS_DB_USER
+            value: wordpress
+          - name: WORDPRESS_DB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: wordpress-secret
+                key: db_wordpress_password
+          - name: WORDPRESS_DB_HOST
+            value: mysql
