--- a/wp_wordpress.yml
+++ b/wp_wordpress.yml
@@ -23,6 +23,9 @@ spec:
         ports:
         - containerPort: 80
           name: wordpress
+        volumeMounts:
+        - name: content
+          mountPath: /var/www/html
         env:
           - name: WORDPRESS_DB_USER
             value: wordpress
@@ -33,3 +36,7 @@ spec:
                 key: db_wordpress_password
           - name: WORDPRESS_DB_HOST
             value: mysql
+        volumes:
+          - name: content
+            persistentVolumeClaim:
+              claimName: content-wordpress
