--- a/wp_wordpress.yml
+++ b/wp_wordpress.yml
@@ -19,7 +19,7 @@ metadata:
 spec:
   scaleTargetRef:
     kind: ReplicaSet
-    name: wordpress
+    app: wordpress
   minReplicas: 1
   maxReplicas: 5
   targetCPUUtilizationPercentage: 20
