--- a/wp_wordpress.yml
+++ b/wp_wordpress.yml
@@ -62,6 +62,11 @@ spec:
                 key: db_wordpress_password
           - name: WORDPRESS_DB_HOST
             value: mysql
+        resources:
+          limits:
+            cpu: "100m"
+          requests:
+            cpu: "100m"  
       volumes:
          - name: content
            persistentVolumeClaim:
